Add interactive form

--- a/index.html
+++ b/index.html
@@ -6,348 +6,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Formulario</h1>
-<table>
-<thead>
-<tr><th>Nombre y Apellido</th><th>Edad</th><th>Grado Educativo</th><th>Fecha</th><th>Responsable</th></tr>
-</thead>
-</table>
-<pre>
-Nº Preguntas
-1 Tengo las instrucciones de esta prueba bien grabadas en la mente.
-  a Sí
-  b A medias
-  c No
-2 Estoy listo para contestar cada pregunta tan sinceramente como me sea posible
-  a Sí
-  b En duda
-  c No
-3 Sería muy bueno que las vacaciones fueran más largas y todos tuvieran que tomarlas
-  a 0
-  b Por lo general
-  c Raras veces
-4 Yo puedo encontrar energía suficiente para enfrentarme a mis dificultades
-  a Siempre
-  b Por lo general
-  c Raras veces
-5 Me pongo un poco nervioso con los animales salvajes, aun cuando estén cerrados en jaulas macizas
-  a Sí
-  b Indeciso
-  c No
-6 Evito criticar a la gente y sus ideas
-  a Sí
-  b A veces
-  c No
-7 Le hago observaciones sarcásticas a las personas que creo que se lo mercen
-  a Por lo general
-  b A veces
-  c Nunca
-8 Prefiero la música semiclasica a las tonadas populares
-  a Cierto
-  b En duda
-  c F also
-9 Si mirara pelear a los niños de mi vecino:
-  a Dearía que terminaran de solucionar su problema
-  b No sé
-  c Razonaría con ellos
-10 En los eventos sociales:
-  a Me anticipo rápidamente
-  b A medias
-  c Prefiero estarme tranquilo y a distancia
-11 Yo preferiría ser:
-  a Ingeniero constructor
-  b Quién sabe
-  c Profesor de ciencias sociales
-12 Yo pasaría una tarde libre:
-  a Con un buen libro
-  b En duda
-  c Trabajando con mis amigos en algún pasatiempo
-13 Por lo general puedo tolerar a la gente vanidosa aun cuando fanfarronee y demuestre que se cree la gran cosa
-  a Sí
-  b A medias
-  c No
-14 Yo preferiria que la persona con la que me casara fuera socialmente admirada, más que bien dotada para el arte y la literatura
-  a Cierto
-  b En duda
-  c F also
-15 A veces siento un desagrado irracional por alguna persona
-  a Pero es tan ligero que puedo ocultarlo fácilmente
-  b A medias
-  c Es tan claro que tiendo a expresarlo
-16 En una situación que puede volverse peligrosa creo que hay que hacer ruido y gritar aunque se pierda la cortesía y las buenas maneras
-  a Sí
-  b En duda
-  c No
-17 Estoy siempre, completamente al tanto de los intentos de hacerle propaganda a algo en las cosas que leo
-  a Sí
-  b En duda
-  c No
-18 Me despirto por las noches y tengo dificultades para dormirme porque estoy intranquilo
-  a A medias
-  b A veces
-  c Nunca
-19 No me siento culpable se me regañan por algo que no hice
-  a Cierto
-  b En duda
-  c F also
-20 Me considero una persona literal, que busca nuevos caminos, más que una persona práctica  que sigue caminos conocidos
-  a Cierto
-  b Dudoso
-  c F also
-21 Me doy cuenta que si mi interés por la gente y por las diversiones tienden a cambiar bastante rápido
-  a Sí
-  b A medias
-  c No
-22 Si se trata de hacer algo, preferiría trabajar:
-  a En un comité
-  b No sé
-  c Por mi propia cuenta
-23 Me sorprendo a mí mismo contando cosas sin ningún objeto en especial
-  a A menudo
-  b En ocaciones
-  c Nunca
-24 Cuando estoy conversando me gusta:
-  a Decir las cosas tal y como se me ocurren
-  b A medias
-  c Organizar primero mis pensamientos
-25 Nunca siento la necesidad de hacer garabatos ni estarme moviendo mientras estoy sentado con otras personas
-  a Cierto
-  b En duda
-  c F also
-26 Con las mismas horas de trabajo o idéntica paga, preferiría la vida de:
-  a Un carpintero o un cocinero
-  b Quién sabe
-  c Mozo de un buen restaurante
-27 Hablando con las personas que conozco prefiero:
-  a Conversar sobre cosas impersonales
-  b A medias
-  c Charlar aceraca de la gente y sus sentimiendtos
-28 "Pala" es a "Cavar" como "Cuchillo" es a:
-  a Afilado
-  b Cortar
-  c Palear
-29 A veces no puedo dormirme porque tengo una idea rotando en mi mente
-  a Cierto
-  b Dudoso
-  c F also
-30 En mi vida personal, casi siempre alcanzo las metas que me propongo:
-  a Cierto
-  b Dudoso
-  c F also
-31 Cuando le digo a alguien deliberadamente una mentira, tengo que bajar la vista porque me avergonzaría mirarlo a los ojos
-  a Cierto
-  b Dudoso
-  c F also
-32 No estoy a gusto cuando trabajo en un proyecto que requiere acciones rápidas que afecten a los demás
-  a Cierto
-  b A medias
-  c F also
-33 La mayoría de la gente que conozco me considera como un conversador agradable
-  a Sí
-  b Quién sabe
-  c No
-34 Mucha gente común y corriente se sorprendería si conociera mis opiniones personales íntimas
-  a Sí
-  b En duda
-  c No
-35 Me siento un poco turbado si de repente me convierto en el foco de atención de un grupo de personas
-  a Sí
-  b A medias
-  c No
-36 Me da gusto siempre reunirme con grupos grandes, por ejemplo: en una fiesta, en una junta, etc.
-  a Sí
-  b A medias
-  c No
-37 En el colegip prefiero (o preferí):
-  a La música
-  b En duda
-  c El trabajo manual y los talleres o artesanías
-38 Creo que la mayoría de la gente está un poco "chiflada" aunque no les guste admitirlo
-  a Sí
-  b Quien sabe
-  c No
-39 Me agrada un amigo de mi sexo que:
-  a Piense seriamente sus actitudes ante la vida
-  b A medias
-  c Sea eficiente y práctico en sus intereses
-40 "Si la primera vez no resultó, pruebe una y otra vez". Es un refrán completamente olvidado en el mundo moderno
-  a Sí
-  b Quién sabe
-  c No
-41 Siento una necesidad de emprender actividades físicas rudas, de vez en cuando
-  a Sí
-  b En duda
-  c No
-42 Preferiría juntarme con gente bien adecuada a juntarme con individuos toscos y rebeldes
-  a Sí
-  b A medias
-  c No
-43 Respecto a intereses intelectuales, mis padres están (o estuvieron):
-  a Un poco bajo del promedio
-  b En el promedio
-  c Arriba del promedio
-44 Cuando el jefe (o el profesor) me llaman:
-  a Veo una oportunidad para hablar de cosas que me interesan
-  b En duda
-  c Temo que algo haya salido mal
-45 Cuando estoy triste, siento una fuerte necesidad de recurrir a alguien
-  a Sí
-  b En duda
-  c No
-46 Me confundo en ocaciones de la posición de la derecha y de la izquierda cuando me veo en el espejo
-  a Cierto
-  b Dudoso
-  c F also
-47 De adolescente participé en los deportes escolares
-  a de vez en cuando
-  b Bastante
-  c Con frecuencia
-48 Preferiría detenerme en la calle a mirar a un artista pintando que a escuchar a quienes discuten.
-  a Cierto
-  b En duda
-  c F also
-49 A veces me entra un estado de tensión y confución cuando pienso en los sucesos del día
-  a Sí
-  b A medias
-  c No
-50 A veces dudo que la gente con la que estoy hablando se interese verdaderamente en lo que estoy diciendo
-  a Sí
-  b A medias
-  c No
-51 Me gustaría ser:
-  a Un guardabosques
-  b Quién sabe
-  c Maestro de primaria o secundaria
-52 En santos y cumpleaños
-  a Me gusta hacer regalos personales
-  b Quien sabe
-  c siento que comprar regalos es un poco fastidioso
-53 "Cansado" es a "Trabajo", omo "Orgullo" es a:
-  a descanso
-  b éxito
-  c ejercicio
-54 ¿Cuál de estas tres palabras es diferente de las otras?
-  a vela
-  b luna
-  c luz eléctrica
-55 Yo admiro  a mis padres en todos los aspectos importantes
-  a Sí
-  b En duda
-  c No
-56 Tengo ciuertas características en las que me siento definitivamente superior a la mayoría de la gente
-  a Sí
-  b En duda
-  c No
-57 Si es útil para otros, a mi no me importaría aceptar un trabajo en donde me ensucie, aunque  algunas personas lo consideran inferior
-  a Cierto
-  b no se
-  c F also
-58 Me gustaria asistor a espectáculos, o ir a divertirme
-  a Más de una vez por semana (más de lo normal)
-  b Una vez a la semana (lo normal)
-  c Menos de una vez por semana (menos de lo normal)
-59 Pienso que la plena libertad es más importante que las buenas maneras o el respeto a la ley
-  a Sí
-  b En duda
-  c No
-60 Tengo la tendencia a quedarme callado en la presencia de personas superiores (de más edad, experiencia, jerarquía o puesto)
-  a Sí
-  b En duda
-  c No
-61 Se me hace difícil hablar o recitar frente a un grupo grande
-  a Sí
-  b En duda
-  c No
-62 Preferiría vivir en una población que fuera:
-  a Tosca pero llena de prosperidad y progreso
-  b No sé
-  c Artística y relativamente pobre
-63 Si cometo falta de educación puedo olvifarla pronto
-  a Sí
-  b Quien sabe
-  c No
-64 Cuando leo algun artículo tendencioso o injusto en una revista tiendo a olvidarlo más que sentir ganas de "devolverles el golpe"
-  a Cierto
-  b En duda
-  c F also
-65 Tiendo a olvidar muchas cosas triviales y sin importancia, como nombres de calles, tiendas, etc.
-  a Sí
-  b En duda
-  c No
-66 Se me considera una persona fácilmente influenciable cuando recurren a mis sentimientos
-  a Sí
-  b Quien sabe
-  c No
-67 Yo como mis alimentos con gusto, no siempre tan cuidadosay apropiadamente como algunas personas
-  a Cierto
-  b En duda
-  c F also
-68 En las dificultades diarias por lo general no pierdo la esperanza
-  a Sí
-  b En duda
-  c No
-69 A veces la gente me advierte que demuestro mi excitación con voces y ademanes demasiado avidentes
-  a Sí
-  b En duda
-  c No
-70 De adolescente, si mi opinión era distinta a la de mis padres, por lo general:
-  a La mantenía
-  b A medias
-  c Aceptaba la autoridad de mis padres
-71 Preferiría casarme con alguien capaz de:
-  a Mantener a la familia interesada en sus propias actividades
-  b En duda
-  c Hacer que la familia tome parte de la vida social del vecindario
-72 Preferiría gozar de la vida con calma a mi manera, más que ser admirado por mis éxitos
-  a Cierto
-  b En duda
-  c No
-73 Puedo trabajar con cuidado en ela mayor parte de las cosas sin que me pertube el ruido que la gente hace a mi alrededor
-  a Sí
-  b En duda
-  c No
-74 Se me hace últimamente, una o dos veces, me ha echado la culpa más de lo que realmente merecía
-  a Sí
-  b En duda
-  c No
-75 Soy capaz de expresar mis sentimientos bajo mi estricto control
-  a Sí
-  b En duda
-  c No
-76 Al inventar algo útil preferiría:
-  a Perfeccionarlo en el laboratorio
-  b En duda
-  c Venderselo a la gente
-77 "Sorpresa" es a "Extraño" como "Miedo" es a:
-  a Valiente
-  b Ansioso
-  c Terrible
-78 ¿Cuál de estas fracciones es distinta de las otras dos?
-  a 3/7
-  b 3/9
-  c 3/11
-79 No sé porqué, pero algunas personas como que me ignoran o me evitan
-  a Cierto
-  b En duda
-  c F also
-80 La gente me trata menos razonablemente de lo que merecen mis buenas intenciones
-  a A menudo
-  b En ocaciones
-  c Nunca
-81 Me molesta que se digan palabras groseras aun cuando no hay mujeres delante
-  a Sí
-  b A medias
-  c No
-82 Decididamente tengo bastante menos amigos que la mayoría de la gente
-  a Sí
-  b Quien sabe
-  c No
-83 Me disgustaría estar en un sitio donde no hubiera mucha gente con quien nonversar
-  a Sí
-  b En duda
-  c No
-84 La gente me dice descuidado, a veces, aunque piensen que soy persona activa
-  a Sí
-  b En duda
-  c No
-</pre></body></html>
+    <h1>Formulario</h1>
+    <form id="survey-form">
+        <fieldset>
+            <legend>Datos personales</legend>
+            <label>Nombre y Apellido:
+                <input type="text" name="nombre" required>
+            </label><br>
+            <label>Edad:
+                <input type="number" name="edad" required>
+            </label><br>
+            <label>Grado Educativo:
+                <input type="text" name="grado" required>
+            </label><br>
+            <label>Fecha:
+                <input type="date" name="fecha" required>
+            </label><br>
+            <label>Responsable:
+                <input type="text" name="responsable" required>
+            </label>
+        </fieldset>
+        <div id="questions-container"></div>
+        <button type="submit">Enviar</button>
+    </form>
+
+    <script src="main.js"></script>
+</body>
+</html>
