--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Formulario</h1>
     <form id="survey-form">
-        <fieldset>
+        <fieldset class="personal-data">
             <legend>Datos personales</legend>
             <label>Nombre y Apellido:
                 <input type="text" name="nombre" required>
