Add factor table below personal data

--- a/index.html
+++ b/index.html
@@ -26,6 +26,54 @@
                 <input type="text" name="responsable" required>
             </label>
         </fieldset>
+        <table id="factors-table">
+            <thead>
+                <tr>
+                    <th>Factor</th>
+                    <th>A</th>
+                    <th>B</th>
+                    <th>C</th>
+                    <th>E</th>
+                    <th>F</th>
+                    <th>G</th>
+                    <th>H</th>
+                    <th>I</th>
+                    <th>L</th>
+                    <th>M</th>
+                    <th>N</th>
+                    <th>O</th>
+                    <th>Q1</th>
+                    <th>Q2</th>
+                    <th>Q3</th>
+                    <th>Q4</th>
+                    <th>PB</th>
+                    <th>Decat</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
         <div id="questions-container"></div>
         <button type="submit">Enviar</button>
     </form>
