--- a/index.html
+++ b/index.html
@@ -46,15 +46,30 @@
                     <th>Q2</th>
                     <th>Q3</th>
                     <th>Q4</th>
-                    <th>PB</th>
-                    <th>Decat</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td>PB</td>
                     <td></td>
                     <td></td>
                     <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Decat</td>
                     <td></td>
                     <td></td>
                     <td></td>
