Add sexo field and implement factor B

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <label>Edad:
                 <input type="number" name="edad" required>
             </label><br>
+            <label>Sexo:
+                <select name="sexo" required>
+                    <option value="m">Masculino</option>
+                    <option value="f">Femenino</option>
+                    <option value="o">Otro</option>
+                </select>
+            </label><br>
             <label>Grado Educativo:
                 <input type="text" name="grado" required>
             </label><br>
@@ -52,7 +59,7 @@
                 <tr>
                     <td>PB</td>
                         <td id="pb-a"></td>
-                    <td></td>
+                    <td id="pb-b"></td>
                     <td></td>
                     <td></td>
                     <td></td>
