Add Decat calculation

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
                 </tr>
                 <tr>
                     <td>Decat</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td id="decat-a"></td>
+                    <td id="decat-b"></td>
+                    <td id="decat-c"></td>
+                    <td id="decat-e"></td>
+                    <td id="decat-f"></td>
+                    <td id="decat-g"></td>
+                    <td id="decat-h"></td>
+                    <td id="decat-i"></td>
+                    <td id="decat-l"></td>
+                    <td id="decat-m"></td>
+                    <td id="decat-n"></td>
+                    <td id="decat-o"></td>
+                    <td id="decat-q1"></td>
+                    <td id="decat-q2"></td>
+                    <td id="decat-q3"></td>
+                    <td id="decat-q4"></td>
                 </tr>
             </tbody>
         </table>
