--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
         <button type="submit">Enviar</button>
     </form>
 
+    <div class="chart-wrapper">
+        <canvas id="results-chart"></canvas>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
