--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <script src="main.js"></script>
 </body>
 </html>
