Add personality profile chart

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
         <canvas id="results-chart"></canvas>
     </div>
 
+    <div class="chart-wrapper">
+        <h2>Perfil de personalidad</h2>
+        <canvas id="perfil-chart"></canvas>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <script src="main.js"></script>
