--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         </table>
         <div id="questions-container"></div>
         <button type="submit">Enviar</button>
+        <button type="button" id="generate-report">Generar informe</button>
     </form>
 
     <div class="chart-wrapper">
@@ -149,6 +150,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+    <script src="https://unpkg.com/docx@7.7.0/build/index.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
