Revert "Add tables and centered perfil bar chart"

--- a/index.html
+++ b/index.html
@@ -108,55 +108,8 @@
     </div>
 
     <div class="chart-wrapper">
-        <h2 style="text-align:center">PERFIL DEL CUESTIONARIO 16 PF</h2>
-        <div class="tabla-container">
-            <table>
-                <tr>
-                    <th>Factor</th>
-                    <th>PB</th>
-                    <th>Decat</th>
-                    <th>Baja Puntuación</th>
-                </tr>
-                <tr><td>A</td><td id="perfil-pb-a"></td><td id="perfil-decat-a"></td><td>Soliloquia</td></tr>
-                <tr><td>B</td><td id="perfil-pb-b"></td><td id="perfil-decat-b"></td><td>Baja Cap.esc.</td></tr>
-                <tr><td>C</td><td id="perfil-pb-c"></td><td id="perfil-decat-c"></td><td>Debilidad Yo</td></tr>
-                <tr><td>E</td><td id="perfil-pb-e"></td><td id="perfil-decat-e"></td><td>Sumisión</td></tr>
-                <tr><td>F</td><td id="perfil-pb-f"></td><td id="perfil-decat-f"></td><td>Retraido</td></tr>
-                <tr><td>G</td><td id="perfil-pb-g"></td><td id="perfil-decat-g"></td><td>Superego debil</td></tr>
-                <tr><td>H</td><td id="perfil-pb-h"></td><td id="perfil-decat-h"></td><td>Timidez</td></tr>
-                <tr><td>I</td><td id="perfil-pb-i"></td><td id="perfil-decat-i"></td><td>Severidad</td></tr>
-                <tr><td>L</td><td id="perfil-pb-l"></td><td id="perfil-decat-l"></td><td>Confianza</td></tr>
-                <tr><td>M</td><td id="perfil-pb-m"></td><td id="perfil-decat-m"></td><td>Objetividad</td></tr>
-                <tr><td>N</td><td id="perfil-pb-n"></td><td id="perfil-decat-n"></td><td>Ingenuidad</td></tr>
-                <tr><td>O</td><td id="perfil-pb-o"></td><td id="perfil-decat-o"></td><td>Adec. Serena</td></tr>
-                <tr><td>Q1</td><td id="perfil-pb-q1"></td><td id="perfil-decat-q1"></td><td>Conservadurismo</td></tr>
-                <tr><td>Q2</td><td id="perfil-pb-q2"></td><td id="perfil-decat-q2"></td><td>Dep. Grupal</td></tr>
-                <tr><td>Q3</td><td id="perfil-pb-q3"></td><td id="perfil-decat-q3"></td><td>Indiferencia</td></tr>
-                <tr><td>Q4</td><td id="perfil-pb-q4"></td><td id="perfil-decat-q4"></td><td>Tranquilidad</td></tr>
-            </table>
-            <canvas id="perfil-chart"></canvas>
-            <table>
-                <tr>
-                    <th>Alta Puntuación</th>
-                </tr>
-                <tr><td>Sociabilidad</td></tr>
-                <tr><td>Alta Cap.esc.</td></tr>
-                <tr><td>Fuerza sup del Yo</td></tr>
-                <tr><td>Dominante</td></tr>
-                <tr><td>Impetuosidad</td></tr>
-                <tr><td>Superego fuerte</td></tr>
-                <tr><td>Audacia</td></tr>
-                <tr><td>Sensib. Emoc</td></tr>
-                <tr><td>Desconfianza</td></tr>
-                <tr><td>Subjetividad</td></tr>
-                <tr><td>Astucia</td></tr>
-                <tr><td>Propens. Culpabil.</td></tr>
-                <tr><td>Radicalismo</td></tr>
-                <tr><td>Autosuficiencia</td></tr>
-                <tr><td>Control</td></tr>
-                <tr><td>Tensión</td></tr>
-            </table>
-        </div>
+        <h2>Perfil de personalidad</h2>
+        <canvas id="perfil-chart"></canvas>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
