Actualiza grafico de barras y tablas

--- a/index.html
+++ b/index.html
@@ -102,9 +102,55 @@
     </form>
 
     <div class="chart-wrapper">
-        <div class="chart-grid">
-            <canvas id="results-chart"></canvas>
+        <h2 style="text-align:center">PERFIL DEL CUESTIONARIO 16 PF</h2>
+        <div class="tabla-container">
+            <table>
+                <tr>
+                    <th>Factor</th>
+                    <th>PB</th>
+                    <th>Decat</th>
+                    <th>Baja Puntuaci&oacute;n</th>
+                </tr>
+                <tr><td>A</td><td id="res-pb-a"></td><td id="res-decat-a"></td><td>Soliloquia</td></tr>
+                <tr><td>B</td><td id="res-pb-b"></td><td id="res-decat-b"></td><td>Baja Cap.esc.</td></tr>
+                <tr><td>C</td><td id="res-pb-c"></td><td id="res-decat-c"></td><td>Debilidad Yo</td></tr>
+                <tr><td>E</td><td id="res-pb-e"></td><td id="res-decat-e"></td><td>Sumisi&oacute;n</td></tr>
+                <tr><td>F</td><td id="res-pb-f"></td><td id="res-decat-f"></td><td>Retra&iacute;do</td></tr>
+                <tr><td>G</td><td id="res-pb-g"></td><td id="res-decat-g"></td><td>Superego d&eacute;bil</td></tr>
+                <tr><td>H</td><td id="res-pb-h"></td><td id="res-decat-h"></td><td>Timidez</td></tr>
+                <tr><td>I</td><td id="res-pb-i"></td><td id="res-decat-i"></td><td>Severidad</td></tr>
+                <tr><td>L</td><td id="res-pb-l"></td><td id="res-decat-l"></td><td>Confianza</td></tr>
+                <tr><td>M</td><td id="res-pb-m"></td><td id="res-decat-m"></td><td>Objetividad</td></tr>
+                <tr><td>N</td><td id="res-pb-n"></td><td id="res-decat-n"></td><td>Ingenuidad</td></tr>
+                <tr><td>O</td><td id="res-pb-o"></td><td id="res-decat-o"></td><td>Adec. Serena</td></tr>
+                <tr><td>Q1</td><td id="res-pb-q1"></td><td id="res-decat-q1"></td><td>Conservadurismo</td></tr>
+                <tr><td>Q2</td><td id="res-pb-q2"></td><td id="res-decat-q2"></td><td>Dep. Grupal</td></tr>
+                <tr><td>Q3</td><td id="res-pb-q3"></td><td id="res-decat-q3"></td><td>Indiferencia</td></tr>
+                <tr><td>Q4</td><td id="res-pb-q4"></td><td id="res-decat-q4"></td><td>Tranquilidad</td></tr>
+            </table>
+            <table>
+                <tr>
+                    <th>Alta Puntuaci&oacute;n</th>
+                </tr>
+                <tr><td>Sociabilidad</td></tr>
+                <tr><td>Alta Cap.esc.</td></tr>
+                <tr><td>Fuerza sup del Yo</td></tr>
+                <tr><td>Dominante</td></tr>
+                <tr><td>Impetuosidad</td></tr>
+                <tr><td>Superego fuerte</td></tr>
+                <tr><td>Audacia</td></tr>
+                <tr><td>Sensib. Emoc</td></tr>
+                <tr><td>Desconfianza</td></tr>
+                <tr><td>Subjetividad</td></tr>
+                <tr><td>Astucia</td></tr>
+                <tr><td>Propens. Culpabil.</td></tr>
+                <tr><td>Radicalismo</td></tr>
+                <tr><td>Autosuficiencia</td></tr>
+                <tr><td>Control</td></tr>
+                <tr><td>Tensi&oacute;n</td></tr>
+            </table>
         </div>
+        <canvas id="results-chart"></canvas>
     </div>
 
     <div class="chart-wrapper">
